# trading-analytics-example

./: .env.example  .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/trading_analytics/: main.py
src/trading_analytics/data/: main.py  utils.py
src/trading_analytics/data/sample/: account_snapshots.json  accounts.json  executions.json  stop_orders.json
src/trading_analytics/db/: db.py
src/trading_analytics/trading_analytics_example_dbt/: dbt_project.yml
src/trading_analytics/trading_analytics_example_dbt/models/: avg_performance_day.sql  monthly_performance.sql  schema.yml  trade_count.sql
trading_analytics_example_dbt/models/: avg_performance_month.sql  avg_performance_week.sql  daily_performance.sql  trades_view.sql  weekly_performance.sql
