[project]
name = "trading-analytics-example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dbt-core>=1.11.2",
    "dbt-duckdb>=1.10.0",
    "dotenv>=0.9.9",
    "duckdb>=1.4.3",
    "polars>=1.37.0",
    "pyarrow>=22.0.0",
]


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
trading-analytics = "trading_analytics.main:main"